Utvidet hendelse-prosessering med utleding av ledighet, la til mange tester
